[package]
name = "mwal"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["libsql", "sqlite", "mvsqlite", "wal", "replication"]
description = "Virtual WAL for mvSQLite, powered by libSQL"

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
bytes = "1.3.0"
futures = "0.3.25"
mvfs = { version = "0.3.0-beta.1", path = "../mvfs" }
reqwest = "0.11.13"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v7"] }

[lib]
crate-type = ["rlib", "staticlib"]
